@@ -1,3 +1,10 @@
+2004-09-02  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* boards/boardicons/followline.png: created by Bruno.
+	* boards/followline.xml.in: completed the doc. moved to difficulty 1
+	* boards/images/followline.png: created using flowers from www.openclipart.org (public domain)
+	* src/boards/python/followline.py: completed the board.
+
 2004-09-01  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* gcompris.spec.in: added missing file
